[gd_scene load_steps=37 format=3 uid="uid://cvseroxaerrnp"]

[ext_resource type="Script" path="res://cenas/responderQuizTwitch/responderQuizTwitch.gd" id="1_nlroy"]
[ext_resource type="FontFile" uid="uid://hoguj3iguvyo" path="res://resources/fonts/Nunito/static/Nunito-Black.ttf" id="1_tcl7k"]
[ext_resource type="FontFile" uid="uid://bkberxkouofus" path="res://resources/fonts/Nunito/static/Nunito-Bold.ttf" id="2_widrn"]
[ext_resource type="PackedScene" uid="uid://xgnjmud6qhb6" path="res://componentes/placarLateralTwitch/placarLateralTwitch.tscn" id="3_bv4vy"]
[ext_resource type="Theme" uid="uid://bgaaf3jd53b7o" path="res://cenas/responderQuizTwitch/mensagemRichLabelTema.tres" id="5_eud7t"]
[ext_resource type="PackedScene" uid="uid://rltkhsc486qd" path="res://componentes/containerCameraStreamerTwitch/containerCameraStreamerTwitch.tscn" id="5_md11y"]
[ext_resource type="FontFile" uid="uid://bx1dxv0xq3rv3" path="res://resources/fonts/Nunito/static/Nunito-Regular.ttf" id="6_35c3d"]
[ext_resource type="PackedScene" uid="uid://dti8dmq2k3vo" path="res://componentes/painelResultadosTwitch/painelResultadosTwitch.tscn" id="8_l2ccs"]
[ext_resource type="Script" path="res://componentes/painelResultadosTwitch/painelResultadosTwitch.gd" id="9_6ypjc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x71d6"]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_goxcp"]
bg_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8dom"]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4oqja"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_excxv"]
Button/colors/font_color = Color(0.172549, 0.2, 0.435294, 1)
Button/colors/font_focus_color = Color(0.172549, 0.2, 0.435294, 1)
Button/colors/font_hover_color = Color(0.172549, 0.2, 0.435294, 1)
Button/colors/font_hover_pressed_color = Color(0.225, 0.2525, 0.5, 1)
Button/colors/font_pressed_color = Color(0.223529, 0.25098, 0.501961, 1)
Button/font_sizes/font_size = 22
Button/fonts/font = ExtResource("1_tcl7k")
Button/styles/focus = SubResource("StyleBoxFlat_x71d6")
Button/styles/hover = SubResource("StyleBoxFlat_goxcp")
Button/styles/hover_pressed = SubResource("StyleBoxFlat_r8dom")
Button/styles/normal = SubResource("StyleBoxFlat_4oqja")
Button/styles/pressed = SubResource("StyleBoxFlat_r8dom")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jog06"]
color = Color(0, 0, 0, 0)

[sub_resource type="Theme" id="Theme_wgsyq"]
HSeparator/styles/separator = SubResource("StyleBoxLine_jog06")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jedsy"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.290196, 0.313726, 0.545098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_6upbm"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_jedsy")

[sub_resource type="Theme" id="Theme_ilwnt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gplb0"]
bg_color = Color(0.290196, 0.313726, 0.545098, 1)
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="Theme" id="Theme_7nfw2"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_gplb0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yua2t"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.290196, 0.313726, 0.545098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a00tr"]
bg_color = Color(0.290196, 0.313726, 0.545098, 1)
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="GDScript" id="GDScript_axnl0"]
script/source = "extends VBoxContainer
#
#@onready var button = $\"../../../../../../../Button\"
#@onready var mensagens_twitch = $\".\"
#@onready var container_mensagens_twitch = $\"..\"
#@onready var scroll = container_mensagens_twitch.get_v_scroll_bar()
#const MENSAGEM_TEMA = preload(\"res://cenas/responderQuizTwitch/mensagemTema.tres\")
#
#
#func _ready():
	#button.connect(\"pressed\", adicionaMensagem)
	#scroll.connect(\"changed\", troca)
#
#
#func troca():
	#container_mensagens_twitch.scroll_vertical = scroll.max_value
	#
#
#func adicionaMensagem():
	#var nro = randi()
	#var label = Label.new()
	#label.theme = MENSAGEM_TEMA
	#label.text = str(nro)
	#
	#mensagens_twitch.add_child(label)
	#
	#if(mensagens_twitch.get_children().size() > 20):
		#mensagens_twitch.remove_child(mensagens_twitch.get_child(0))
"

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jwo6l"]
color = Color(0, 0, 0, 0)

[sub_resource type="Theme" id="Theme_x110m"]
VSeparator/styles/separator = SubResource("StyleBoxLine_jwo6l")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lyhlr"]
bg_color = Color(0.95, 0.95, 0.95, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.584314, 0.6, 0.74902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s3tev"]
bg_color = Color(0.172549, 0.2, 0.435294, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.172549, 0.2, 0.435294, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_m0w0o"]
color = Color(0.9, 0.9, 0.9, 1)
thickness = 2

[sub_resource type="Theme" id="Theme_oy20c"]
HSeparator/styles/separator = SubResource("StyleBoxLine_m0w0o")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0fs0t"]
content_margin_top = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78o3r"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
bg_color = Color(0.9, 0.9, 0.9, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.172549, 0.2, 0.435294, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_wwpq8"]
LineEdit/colors/caret_color = Color(0, 0, 0, 1)
LineEdit/colors/font_color = Color(0.3, 0.3, 0.3, 1)
LineEdit/colors/font_placeholder_color = Color(0.603922, 0.603922, 0.603922, 1)
LineEdit/font_sizes/font_size = 26
LineEdit/fonts/font = ExtResource("2_widrn")
LineEdit/styles/focus = SubResource("StyleBoxFlat_78o3r")
LineEdit/styles/normal = SubResource("StyleBoxFlat_78o3r")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pq6it"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.290196, 0.313726, 0.545098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_3ttso"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_pq6it")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwakr"]
bg_color = Color(0.358, 0.6, 0.336, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="RespondeQuizTwitch" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nlroy")

[node name="Comum" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Fundo" type="CanvasLayer" parent="Comum"]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Comum/Fundo"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.2, 0.435294, 1)

[node name="MarginTela" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30
metadata/_edit_use_anchors_ = true

[node name="ItensDaTela" type="HBoxContainer" parent="MarginTela"]
layout_mode = 2

[node name="ItensLaterais" type="VBoxContainer" parent="MarginTela/ItensDaTela"]
layout_mode = 2

[node name="SairSessaoBotao" type="Button" parent="MarginTela/ItensDaTela/ItensLaterais"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_excxv")
text = "SAIR DA SESS√ÉO
"

[node name="Separador" type="HSeparator" parent="MarginTela/ItensDaTela/ItensLaterais"]
layout_mode = 2
theme = SubResource("Theme_wgsyq")
theme_override_constants/separation = 1

[node name="Placar" type="PanelContainer" parent="MarginTela/ItensDaTela/ItensLaterais"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = SubResource("Theme_6upbm")

[node name="ItensPlacar" type="VBoxContainer" parent="MarginTela/ItensDaTela/ItensLaterais/Placar"]
layout_mode = 2
theme = SubResource("Theme_ilwnt")

[node name="Titulo" type="PanelContainer" parent="MarginTela/ItensDaTela/ItensLaterais/Placar/ItensPlacar"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = SubResource("Theme_7nfw2")

[node name="Titulo" type="Label" parent="MarginTela/ItensDaTela/ItensLaterais/Placar/ItensPlacar/Titulo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tcl7k")
theme_override_font_sizes/font_size = 20
text = "PLACAR
"
horizontal_alignment = 1

[node name="PrimeiroColocado" parent="MarginTela/ItensDaTela/ItensLaterais/Placar/ItensPlacar" instance=ExtResource("3_bv4vy")]
layout_mode = 2

[node name="SegundoColocado" parent="MarginTela/ItensDaTela/ItensLaterais/Placar/ItensPlacar" instance=ExtResource("3_bv4vy")]
layout_mode = 2

[node name="TerceiroColocado" parent="MarginTela/ItensDaTela/ItensLaterais/Placar/ItensPlacar" instance=ExtResource("3_bv4vy")]
layout_mode = 2

[node name="Separador2" type="HSeparator" parent="MarginTela/ItensDaTela/ItensLaterais"]
layout_mode = 2
theme = SubResource("Theme_wgsyq")
theme_override_constants/separation = 1

[node name="Chat" type="PanelContainer" parent="MarginTela/ItensDaTela/ItensLaterais"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yua2t")

[node name="ItensChat" type="VBoxContainer" parent="MarginTela/ItensDaTela/ItensLaterais/Chat"]
layout_mode = 2
theme = SubResource("Theme_ilwnt")

[node name="Titulo" type="PanelContainer" parent="MarginTela/ItensDaTela/ItensLaterais/Chat/ItensChat"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a00tr")

[node name="Titulo" type="Label" parent="MarginTela/ItensDaTela/ItensLaterais/Chat/ItensChat/Titulo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tcl7k")
theme_override_font_sizes/font_size = 20
text = "CHAT
"
horizontal_alignment = 1

[node name="ContainerMensagensTwitch" type="ScrollContainer" parent="MarginTela/ItensDaTela/ItensLaterais/Chat/ItensChat"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="MensagensTwitch" type="VBoxContainer" parent="MarginTela/ItensDaTela/ItensLaterais/Chat/ItensChat/ContainerMensagensTwitch"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = SubResource("GDScript_axnl0")

[node name="TesteMensagem" type="RichTextLabel" parent="MarginTela/ItensDaTela/ItensLaterais/Chat/ItensChat/ContainerMensagensTwitch/MensagensTwitch"]
layout_mode = 2
theme = ExtResource("5_eud7t")
bbcode_enabled = true
text = "[color=#6db066]zdzin[/color]: oieee"
fit_content = true

[node name="Separador3" type="HSeparator" parent="MarginTela/ItensDaTela/ItensLaterais"]
layout_mode = 2
theme = SubResource("Theme_wgsyq")
theme_override_constants/separation = 1

[node name="StreamerResponderQuizECamera" parent="MarginTela/ItensDaTela/ItensLaterais" instance=ExtResource("5_md11y")]
layout_mode = 2

[node name="Separador" type="VSeparator" parent="MarginTela/ItensDaTela"]
layout_mode = 2
theme = SubResource("Theme_x110m")

[node name="QuizECronometro" type="VBoxContainer" parent="MarginTela/ItensDaTela"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PainelPrincipal" type="PanelContainer" parent="MarginTela/ItensDaTela/QuizECronometro"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_lyhlr")

[node name="ItensTituloMargin" type="MarginContainer" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="ItensTitulo" type="VBoxContainer" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin"]
layout_mode = 2

[node name="Titulo" type="RichTextLabel" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -15
bbcode_enabled = true
text = "[font=res://resources/fonts/Nunito/static/Nunito-Black.ttf][font_size=70]CEREBELO QUIZ[/font_size]
[font_size=42]COM A TWITCH!![/font_size][/font]"
fit_content = true

[node name="PainelComoJogar" type="PanelContainer" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_s3tev")

[node name="MarginPainelComoJogar" type="MarginContainer" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo/PainelComoJogar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ItensPainelComoJogar" type="VBoxContainer" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo/PainelComoJogar/MarginPainelComoJogar"]
layout_mode = 2

[node name="Titulo" type="Label" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo/PainelComoJogar/MarginPainelComoJogar/ItensPainelComoJogar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_fonts/font = ExtResource("1_tcl7k")
theme_override_font_sizes/font_size = 24
text = "COMO JOGAR"
horizontal_alignment = 1

[node name="Separador" type="HSeparator" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo/PainelComoJogar/MarginPainelComoJogar/ItensPainelComoJogar"]
layout_mode = 2
theme = SubResource("Theme_oy20c")
theme_override_constants/separation = 1

[node name="Instrucoes" type="Label" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo/PainelComoJogar/MarginPainelComoJogar/ItensPainelComoJogar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_constants/line_spacing = 10
theme_override_fonts/font = ExtResource("1_tcl7k")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxEmpty_0fs0t")
text = "- Vincule seu canal na Twitch!
- Se prepare para iniciar o quiz.
- Responda as quest√µes.
- Espalhe conhecimento!
- Se divirta!"

[node name="Separador" type="HSeparator" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo"]
layout_mode = 2
theme = SubResource("Theme_wgsyq")
theme_override_constants/separation = 1

[node name="InputNomeDoCanal" type="LineEdit" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = SubResource("Theme_wwpq8")
placeholder_text = "Insira o nome do canal"
caret_blink = true

[node name="LabelMensagemTwitch" type="Label" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_35c3d")
theme_override_font_sizes/font_size = 16
text = "Com sucesso"

[node name="Separador2" type="HSeparator" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo"]
layout_mode = 2
theme = SubResource("Theme_wgsyq")
theme_override_constants/separation = 1

[node name="BotaoJogar" type="Button" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/ItensTitulo"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "INICIAR QUIZ"

[node name="PerguntaContainer" type="VBoxContainer" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin"]
visible = false
layout_mode = 2

[node name="Resultados" parent="MarginTela/ItensDaTela/QuizECronometro/PainelPrincipal/ItensTituloMargin/PerguntaContainer" instance=ExtResource("8_l2ccs")]
layout_mode = 2
script = ExtResource("9_6ypjc")

[node name="Separador" type="HSeparator" parent="MarginTela/ItensDaTela/QuizECronometro"]
visible = false
layout_mode = 2
theme = SubResource("Theme_wgsyq")
theme_override_constants/separation = 1

[node name="Cronometro" type="PanelContainer" parent="MarginTela/ItensDaTela/QuizECronometro"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = SubResource("Theme_3ttso")

[node name="CronometroContainer" type="VBoxContainer" parent="MarginTela/ItensDaTela/QuizECronometro/Cronometro"]
layout_mode = 2
size_flags_vertical = 4

[node name="TituloECronometro" type="HBoxContainer" parent="MarginTela/ItensDaTela/QuizECronometro/Cronometro/CronometroContainer"]
layout_mode = 2

[node name="Titulo" type="Label" parent="MarginTela/ItensDaTela/QuizECronometro/Cronometro/CronometroContainer/TituloECronometro"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_fonts/font = ExtResource("1_tcl7k")
theme_override_font_sizes/font_size = 24
text = "TEMPO RESTANTE"

[node name="Cronometro" type="Label" parent="MarginTela/ItensDaTela/QuizECronometro/Cronometro/CronometroContainer/TituloECronometro"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_fonts/font = ExtResource("1_tcl7k")
theme_override_font_sizes/font_size = 24
text = "00:00"

[node name="ProgressoDoTempo" type="ProgressBar" parent="MarginTela/ItensDaTela/QuizECronometro/Cronometro/CronometroContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_lwakr")
max_value = 30.0
step = 1.0
show_percentage = false

[node name="Cronometro" type="Timer" parent="MarginTela/ItensDaTela/QuizECronometro/Cronometro"]
